--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <title>Gong Man</title>
+    <link rel="stylesheet" href="animate.css">
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
@@ -37,6 +38,7 @@
         height: 80px;
         width: 80px;
         padding-top: 20px;
+        position: relative;
       }
 
     </style>
